# tess-review

./: .gitignore  README.md  install.sh  pyproject.toml  setup.py  tess_review.py
vector_db/: chroma.sqlite3
