[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tess-review"
version = "2.0.0"
description = "TESS_REVIEW: Interactive CLI code reviewer"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
]
requires-python = ">=3.8"

[project.scripts]
tess-review = "tess_review:main"
tess = "tess_review:main"

[tool.setuptools]
py-modules = ["tess_review"]
